[gd_scene load_steps=2 format=3 uid="uid://bluvjvg6tn7cq"]

[ext_resource type="Script" path="res://UI.gd" id="1_wpxu0"]

[node name="UIComponent" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_wpxu0")

[node name="WeaponInfo" type="Control" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -200.0
offset_right = 250.0
grow_vertical = 0
mouse_filter = 2

[node name="WeaponName" type="Label" parent="WeaponInfo"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -125.0
offset_right = 125.0
offset_bottom = 100.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 40
text = "AK47"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerReserveAmmo" type="Label" parent="WeaponInfo"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -100.0
offset_right = 125.0
grow_vertical = 0
theme_override_font_sizes/font_size = 40
text = "30"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerActiveAmmo" type="Label" parent="WeaponInfo"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -125.0
offset_top = -100.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 40
text = "300"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerPointsInfo" type="Control" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -20.0
offset_right = 40.0
offset_bottom = 20.0
grow_vertical = 2

[node name="PlayerPointCount" type="Label" parent="PlayerPointsInfo"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -60.0
offset_right = 244.0
offset_bottom = 60.0
grow_vertical = 2
text = "Points"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ZombieCountInfo" type="Control" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 40.0
grow_horizontal = 2

[node name="ZombiesLeftCount" type="Label" parent="ZombieCountInfo"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -138.5
offset_right = 138.5
offset_bottom = 124.0
grow_horizontal = 2
text = "Zombies Left:"
horizontal_alignment = 1
vertical_alignment = 1
